# degreeworks-cli

./: .gitignore  AGENTS.md  CLAUDE.md  INSTALL_FOR_AGENTS.md  QUICKSTART.md  README.md  pyproject.toml
.claude/skills/degreeworks/: SKILL.md
.github/workflows/: ci.yml  publish.yml
assets/banner-src/: README.md  index.html
cli/: README.md
src/degreeworks/: __init__.py  _protocol.py  auth.py  cli.py  client.py  config.py  errors.py  formatting.py  mcp_server.py  parser.py
src/degreeworks/commands/: audit.py  auth_cmd.py  completed.py  course.py  doctor.py  dump.py  progress.py  remaining.py  skill_cmd.py
src/degreeworks/data/skill/: SKILL.md
src/degreeworks/data/skill/references/: commands.md  safety.md
tests/: test_auth.py  test_autologin.py  test_doctor.py  test_mcp_server.py  test_skill.py
