[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "degreeworks-mcp"
version = "0.1.0"
description = "Read-only DegreeWorks MCP server for KSU – built for AI agents to plan student schedules"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Aaryan Kapoor" },
]
keywords = ["ksu", "kennesaw", "degreeworks", "mcp", "model-context-protocol", "ai", "agents", "claude", "schedule", "student"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "mcp[cli]>=1.8.0,<2",
]

[project.optional-dependencies]
# Playwright is only needed for the one-time `dw login` SSO bootstrap.
# It's a heavy dep (~50 MB Chromium) so it's opt-in. After login, the
# MCP server reads cookies from disk and never touches Playwright.
login = ["playwright>=1.40"]

[project.urls]
Homepage = "https://github.com/Aaryan-Kapoor/degreeworks-mcp"
Repository = "https://github.com/Aaryan-Kapoor/degreeworks-mcp"
Issues = "https://github.com/Aaryan-Kapoor/degreeworks-mcp/issues"

[project.scripts]
dw = "degreeworks.cli:cli"
degreeworks-mcp = "degreeworks.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]
