[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "degreeworks-cli"
version = "0.1.0"
description = "Read-only DegreeWorks CLI for KSU — lets an AI agent build your exact semester schedule (real sections, times, CRNs, verified prereqs) from your degree audit"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Aaryan Kapoor" },
]
keywords = ["ksu", "kennesaw", "degreeworks", "cli", "ai", "agents", "claude", "schedule", "student"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "requests>=2.28",
]

[project.optional-dependencies]
# Playwright is only needed for the one-time `dw login` SSO bootstrap.
# It's a heavy dep (~50 MB Chromium) so it's opt-in. After login, the
# CLI reads cookies from disk and never touches Playwright.
login = ["playwright>=1.40"]
# Dev/test tooling. Tests are no-network smoke tests and don't need the
# `login` extra (no Playwright, no browser) — just `pip install -e ".[dev]"`.
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/Aaryan-Kapoor/degreeworks-cli"
Repository = "https://github.com/Aaryan-Kapoor/degreeworks-cli"
Issues = "https://github.com/Aaryan-Kapoor/degreeworks-cli/issues"

[project.scripts]
dw = "degreeworks.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
degreeworks = ["data/skill/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
